<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".CreateStockExchange">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/abc_vector_test"
                android:tint="#DFDFDF"
                android:onClick="back"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
                app:layout_constraintStart_toStartOf="@+id/constraint_layout"
                app:layout_constraintTop_toTopOf="@+id/constraint_layout" />

            <TextView
                android:id="@+id/toolbar_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finance"
                android:textColor="#F6F6F6"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
                app:layout_constraintEnd_toStartOf="@+id/toolbar_icon"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraint_layout"
                app:layout_constraintVertical_bias="0.94" />

            <ImageView
                android:id="@+id/toolbar_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:src="@mipmap/ic_launcher"
                android:textColor="#F6F6F6"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/toolbar_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificator"
                android:textColor="#F6F6F6"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/toolbar_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.275" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_card"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/stockExchangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/stockExchange"
            android:text="@string/ativo"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/stockExchange"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stockExchangeTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_card"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/objectiveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/radioGroup"
            android:text="@string/objetivo"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/objectiveTextView">

            <RadioButton
                android:id="@+id/comprar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:checked="true"
                android:text="@string/comprar" />

            <RadioButton
                android:id="@+id/vender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginLeft="85dp"
                android:text="@string/vender" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_card"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/expectedValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/expectedValue"
            android:text="@string/valor_esperado"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/expectedValue"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expectedValueTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:onClick="save"
        android:text="@string/salvar"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/layout_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>