<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_menu_refresh"
                android:tint="#DFDFDF"
                android:onClick="update"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
                app:layout_constraintStart_toStartOf="@+id/constraint_layout"
                app:layout_constraintTop_toTopOf="@+id/constraint_layout"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/toolbar_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finance"
                android:textColor="#F6F6F6"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
                app:layout_constraintEnd_toStartOf="@+id/toolbar_icon"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="@+id/constraint_layout"
                app:layout_constraintVertical_bias="0.94" />

            <ImageView
                android:id="@+id/toolbar_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:src="@mipmap/ic_launcher"
                android:textColor="#F6F6F6"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="@+id/constraint_layout" />

            <TextView
                android:id="@+id/toolbar_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificator"
                android:textColor="#F6F6F6"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/toolbar_icon"
                app:layout_constraintTop_toTopOf="@+id/constraint_layout"
                app:layout_constraintVertical_bias="0.275" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@android:drawable/ic_input_add"
                android:tint="#DFDFDF"
                android:onClick="add"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
                app:layout_constraintEnd_toEndOf="@+id/constraint_layout"
                app:layout_constraintTop_toTopOf="@+id/constraint_layout"
                android:contentDescription="@string/todo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>